Modified the style for footer to be at bottom

--- a/src/main/webapp/css/cas.css
+++ b/src/main/webapp/css/cas.css
@@ -189,7 +189,7 @@ header{
 #content{
 	background-color: transparent;
 	float: left;
-	min-height: 550px;
+	min-height: 81vh;
 }
 #login{
 	width: 350px;
